# cmake_template_Cpp

./: README.md
.cache/clangd/index/: main.cpp.3DE1ED12E95B732D.idx  main.cpp.69C60C48E610BB08.idx
src/: CMakeLists.txt
